--- a/src/style.styl
+++ b/src/style.styl
@@ -36,5 +36,7 @@
 @import "modules/courses/courses.styl";
 @import "modules/modules/modules.styl";
 @import "modules/faq/faq.styl";
+@import "modules/course/course.styl";
+@import "modules/coursesList/coursesList.styl";
 
 @import "stylus/blocks/wpcf7.styl";
