--- a/src/stylus/blocks/common.styl
+++ b/src/stylus/blocks/common.styl
@@ -93,7 +93,8 @@ img[data-srcset]
     position: relative;
     width: 80px
     height: 80px
-    background: #191919
+    background: $black
+    border-radius: 0 0 40px 0;
     +media('md')
       width: 70px
       height: 70px
@@ -106,14 +107,17 @@ img[data-srcset]
       fill: #ffffff
       top: 50%
       left: 50%
-      transform translate(-50%, -50%)
-      width: 19px
-      height: 19px
+      transform translate(-50%, -50%) scale(-1, 1)
+      width: 31px
+      height: 31px
       anim()
 
-    &--next
+    &--prev
+      border-radius: 40px 0 0 0;
+      margin-right: 5px
+
       svg
-        transform translate(-50%, -50%) rotate(180deg)
+        transform translate(-50%, -50%) scaleY(-1)
 
     &:hover
       svg
@@ -151,170 +155,6 @@ img[data-srcset]
     display: block;
     margin: 0 auto
 
-.bullets
-  display: flex;
-  flex-wrap wrap
-  margin: 0 -5px
-  +media('md')
-    flex-direction column
-    margin: 0
-
-  &__item
-    min-width 33.3333%
-    padding: 5px
-    flex: 1
-    +media('md')
-      padding: 0
-      margin-bottom: 10px
-      &:last-child
-        margin-bottom: 0
-
-  &__card
-    height: 100%
-    background: $brown2
-    padding: 23px 20px 21px 29px
-    color: $white
-    +media('md')
-      padding: 14px 20px 16px 29px
-
-  &__label
-    opacity: .75
-
-  &__value
-    font-size: 27px
-    line-height: 1.35
-    font-weight: bold;
-    +media('md')
-      font-size: 16px
-
-.icons
-  display: flex;
-  flex-wrap wrap
-  margin: -10px -20px
-  +media('md')
-    margin: -10px -23px
-
-  &__item
-    margin: 10px 20px
-    white-space nowrap
-    +media('md')
-      margin: 10px 23px
-
-  svg
-    fill $brown1
-    width: 24px
-    height: 24px
-    margin-right: 15px
-    vertical-align: middle;
-    margin-top: -4px
-    +media('md')
-      display: block;
-      margin-right: 0
-      margin-bottom: 4px
-      width: 18px
-      height: 18px
-
-.advantages
-  display: flex;
-  margin: -10px
-  flex-wrap wrap
-  +media('md')
-    margin: 0
-
-  &__item
-    width: 50%
-    padding: 10px
-    +media('md')
-      width: 100%
-      padding: 0
-      margin-bottom: 10px
-
-  &__card
-    background: $grey2
-    padding: 40px 60px 33px 40px
-    height: 100%
-    +media('md')
-      padding: 30px 40px 23px 30px
-
-  &__icon
-    margin-bottom: 10px
-    +media('md')
-      margin-bottom: 12px
-
-    svg
-      display: block;
-      width: 40px
-      height: 40px
-      fill $brown1
-
-  &__header
-    font-size: 18px
-    font-weight: 600
-    margin-bottom: 2px
-    +media('md')
-      font-size: 16px
-      margin-bottom: 3px
-
-  &__button
-    width: 100%
-    padding: 10px
-    +media('md')
-      padding: 0
-
-    .btn
-      width: 100%
-      padding-top: 22px;
-      padding-bottom: 26px;
-      +media('md')
-        padding-top: 16px
-        padding-bottom: 16px
-
-.people
-  display: flex;
-  flex-wrap wrap
-  margin: 0 -12px
-  +media('md')
-    margin: 0 -5px
-
-  &__item
-    width: 33.3333%
-    padding: 19px 12px
-    +media('lg')
-      padding: 12px 5px
-      width: 50%
-
-  &__image
-    position: relative;
-    margin-bottom: 13px
-    padding: 0 30px
-    +media('md')
-      padding: 0 20px
-      margin-bottom: 11px
-
-    &:before
-      content ''
-      display: block;
-      position: absolute;
-      left: 0
-      width: 100%
-      padding-bottom: 36%;
-      background: $grey1;
-      z-index: -1
-      top: 50%
-      transform translateY(-50%)
-      +media('md')
-        padding-bottom: 42%
-
-    img
-      display: block;
-      margin: 0 auto
-      max-width 100%
-
-  &__text
-    padding: 0 30px
-    +media('md')
-      padding: 0px
-      line-height: 1.5
 
 .content
   & > *:first-child
@@ -453,76 +293,6 @@ img[data-srcset]
     &:after
       opacity: 1
 
-.share
-  border: 1px solid #e8e7e6
-  border-left: 0
-  border-right: 0
-  padding: 22px 0 20px
-  display: flex;
-  flex-wrap wrap
-  align-items center
-  margin-top: 62px
-  +media('md')
-    padding: 15px 0
-    margin: 33px -5px 0
-
-  &__label
-    margin-right: 28px
-    +media('md')
-      width: 100%
-      font-size: 10px
-      margin: 0 5px 5px
-
-  ul
-    margin: 0
-    padding: 0
-    display: flex;
-    flex-wrap wrap
-
-  li
-    padding: 0
-    margin: 0
-    flex: 1
-    +media('md')
-      padding: 5px
-
-    &:before
-      display: none;
-
-  a
-    display: inline-flex
-    align-items center
-    justify-content center
-    position: relative
-    background: $brown1
-    line-height: 1.5
-    color: $white
-    text-align: center;
-    border: 0
-    margin-right: 10px
-    padding: 16px 28px 17px
-    anim()
-    +media('md')
-      margin: 5px 0
-      font-size: 8px
-      padding: 12px 10px 13px
-      width: 100%
-
-    &:focus
-      outline 0
-
-    &:hover
-      background: $brown2
-
-    &:active
-      background: #a18475
-
-  .ya-share2__title
-    letter-spacing .3em
-    font-size: 10px
-    font-weight: 500
-    text-transform: uppercase;
-
 .file
   position: relative;
   overflow: hidden;
@@ -543,3 +313,38 @@ img[data-srcset]
 
   &__name
     word-break break-word
+
+.cards
+  display: flex;
+  flex-wrap wrap
+  margin: 0 -15px 0 0
+  +media('md')
+    margin: 0
+
+  &__item
+    width: 20%
+    padding: 0 15px 15px 0
+    @media screen and (max-width: 1550px)
+      width: 25%
+    @media screen and (max-width: 1250px)
+      width: 33.3333%
+    +media('md')
+      width: 100%
+      padding: 0 0 5px
+
+  &__card
+    width: 100%
+    height: 537px
+    background-position: 50% 50%;
+    background-size: cover;
+    display: flex;
+    align-items flex-end
+    padding: 20px
+    color: #ffffff
+    font-size: 42px
+    line-height: 1.1
+    font-weight: bold;
+    +media('md')
+      padding: 16px 19px
+      height: 420px
+      font-size: 28px
