--- a/src/modules/faq/faq.pug
+++ b/src/modules/faq/faq.pug
@@ -25,10 +25,10 @@
           .faq__input
             .input
               label.input__label напишите нам здесь
-              input.input__input
+              input.input__input.input__input--white
           .faq__input
             .input
               label.input__label ваш адрес для обратной связи
-              input.input__input
+              input.input__input.input__input--white
           .faq__footer
             button.btn ОТПРАВИТЬ
