--- a/src/modules/footer/footer.styl
+++ b/src/modules/footer/footer.styl
@@ -57,6 +57,9 @@
       &:before
         display: none;
 
+    a
+      text-decoration: none;
+
     & > ul
       display: flex;
 
@@ -134,6 +137,7 @@
     height: 80px
     width: 250px
     border: 0;
+    text-decoration: none;
     anim()
     +media('md')
       width: 230px
@@ -193,6 +197,7 @@
     color: #ffffff
     border-bottom: 1px solid #fff
     letter-spacing .01em
+    text-decoration: none;
     anim()
 
     &:hover
