--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -12,10 +12,10 @@ html
     block style
 
   body(onunload="")
-    include ../modules/header/header
+    //include ../modules/header/header
     block body
-    include ../modules/footer/footer
-    .hidden
+    //include ../modules/footer/footer
+    //.hidden
     //include ../modules/photoswipe/photoswipe
     //include ../modules/popup/popup-callback
     //include ../modules/popup/popup-politic
