--- a/src/style.styl
+++ b/src/style.styl
@@ -1,5 +1,5 @@
 /*!!
- * Theme Name: inbrbus
+ * Theme Name: newartdom
  */
 
 @import "destyle.css/destyle.css"
@@ -38,5 +38,13 @@
 @import "modules/faq/faq.styl";
 @import "modules/course/course.styl";
 @import "modules/coursesList/coursesList.styl";
+@import "modules/module/module";
+@import "modules/books/books";
+@import "modules/moduleCourses/moduleCourses";
+@import "modules/register/register";
+@import "modules/customModule/customModule";
+@import "modules/modulesList/modulesList";
+@import "modules/search/search";
+@import "modules/form/form.styl";
 
 @import "stylus/blocks/wpcf7.styl";
