--- a/src/stylus/blocks/typography.styl
+++ b/src/stylus/blocks/typography.styl
@@ -50,15 +50,17 @@ p
     margin-bottom: .8em
 
 a
-  //color: $black
+  color: $black
   //color: inherit
-  color: $brown2
-  border-bottom: 1px solid transparent
+  //color: $brown2
+  //border-bottom: 1px solid transparent
   //padding-bottom: 2px
+  text-decoration: underline;
   anim()
 
   &:hover
-    border-color: $brown2
+    text-decoration: none;
+    //border-color: $brown2
 
 //&:hover
 //  border-color: #e7533b
