--- a/src/modules/course/course.pug
+++ b/src/modules/course/course.pug
@@ -9,8 +9,8 @@
         .course__header Информация#[br]о курсе:
         .course__text Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот.
         .course__footer
-          .course__price 14 500 ₽
-          a.course__button(href='#') ЗАРЕГИСТРИРОВАТЬСЯ
+          .register__price 14 500 ₽
+          a.register__button(href='#') ЗАРЕГИСТРИРОВАТЬСЯ
 
     .gallery.course__aside
       .gallery__slider
