--- a/src/modules/coursesList/coursesList.styl
+++ b/src/modules/coursesList/coursesList.styl
@@ -58,6 +58,7 @@
       position: relative;
       font-weight: bold;
       border: 0
+      text-decoration: none;
 
       &:before
         content: ''
