--- a/src/modules/modules/modules.styl
+++ b/src/modules/modules/modules.styl
@@ -4,9 +4,6 @@
     padding: 35px 0 88px
 
   &__top
-    max-width 1560px
-    padding: 0px 20px
-    margin: 0 auto
     display: flex;
     align-items flex-start
     justify-content space-between
@@ -125,6 +122,7 @@
   &__button
     height: 50px
     margin-top: 60px;
+    text-decoration: none;
     +media('md')
       height: 34px
       margin-top: 14px
