--- a/src/stylus/blocks/checkbox.styl
+++ b/src/stylus/blocks/checkbox.styl
@@ -8,19 +8,13 @@
   span
     display: block
     position: relative
-    font-size: 12px
-    font-weight: 500
-    line-height: 17px
-    letter-spacing .3em
-    padding-left: 30px
-    text-transform: uppercase;
+    font-size: 23px
+    line-height: 1.45
+    padding-left: 54px
     anim()
     +media('md')
       font-size: 8px
       padding-left: 27px
-
-    &:not(:empty):before
-      margin-right: 16px
 
     &:before, &:after
       content: ''
@@ -30,19 +24,19 @@
       position: absolute;
       top: 0
       left: 0
-      width: 17px
-      height: 17px
-      background: #fff
-      border: 2px solid #eee8e5
+      width: 40px
+      height: 40px
+      background: #f6f6f6
+      border: 4px solid #e8e7e7
       anim()
 
     &:after
       position: absolute
-      width: 7px
-      height: 7px
-      top: 5px
-      left: 5px
-      background: $brown2
+      width: 18px
+      height: 18px
+      top: 11px
+      left: 11px
+      background: #70cb4c
       opacity 0
       anim()
 
@@ -51,12 +45,13 @@
       opacity 1
 
     &:before
-      border-color: $brown2
+      border-color: #70cb4c
 
   &:hover
     span
       &:before
-        border-color: $brown2
+        background: #f6f6f6
+        border-color: #70cb4c
 
   &--warn
     color: #e53641
