--- a/src/stylus/blocks/common.styl
+++ b/src/stylus/blocks/common.styl
@@ -25,6 +25,14 @@ html, body
   //overflow-x: hidden
   min-height 100vh
 
+.cWide
+  margin-left: auto
+  margin-right: auto
+  max-width: 1560px
+  padding: 0 20px
+  width: 100%
+
+
 .c
   margin-left: auto
   margin-right: auto
